postcss/testData/inspections/invalidPseudoClass.pcss
:<error descr="Unknown pseudo selector 'pseudo'">pseudo</error>{

}